--- a/tw/culture/reports.html
+++ b/tw/culture/reports.html
@@ -12,14 +12,14 @@
 <body>
     <header id="header">
     </header>
-    <div id="banner" class="isisGreen bg">
+    <div id="banner" class="isGreen bg">
         <div class="location"> <a href="/tw">首頁</a> <i class="fa fa-chevron-right" aria-hidden="true"></i> 文化活動 <i class="fa fa-chevron-right" aria-hidden="true"></i> 相關報導 <i class="fa fa-chevron-right" aria-hidden="true"></i> 2016</div>
         <div class="container">
             <h1>相關報導</h1>
             <p>清溪浣衣 1981</p>
         </div>
     </div>
-    <section id="wrapper" class="isisGreen">
+    <section id="wrapper" class="isGreen">
         <div class="container">
             <div class="content">
                 <div class="chooser">
