--- a/tw/index.html
+++ b/tw/index.html
@@ -24,7 +24,15 @@
         <div class="content">
             <h1>最新消息</h1>
             <div class="all-news">
-               <div class="news">
+                <div class="news">
+                    <a href="#"><img src="/images/eighty.jpg"></a>
+                    <br>
+                    <h3>八十臺陽．再創高峰</h3>
+                    <p>Art Works by Tai-Yang Art Society 2017
+                        <br>
+                        <br> <a href="culture/news.html" class="button">連結</a> </p>
+                </div>
+                <div class="news">
                     <a href="#"><img src="/images/msm.jpg"></a>
                     <br>
                     <h3>2017梅樹月</h3>
