--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -21,7 +21,7 @@
         <section class="timeline">
             <div class="container">
 
-                <div class="block"> <img src="/images/eighty.png" alt="">
+                <div class="block"> <img src="/images/eighty.jpg" alt="">
                     <div class="content">
                         <h2>八十臺陽．再創高峰</h2>
                         <p>
