--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -10,7 +10,7 @@
 
     <body>
         <header id="header"></header>
-        <div id="banner" class="isisGreen bg">
+        <div id="banner" class="isGreen bg">
             <div class="location"> <a href="/tw">首頁</a> <i class="fa fa-chevron-right" aria-hidden="true"></i> 文化活動
                 <i class="fa fa-chevron-right" aria-hidden="true"></i> 最新消息</div>
             <div class="container">
