--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -21,33 +21,33 @@
         <section class="timeline">
             <div class="container">
 
-                <div class="block"> <img src="/images/eighty.jpg" alt="">
+                <div class="block"> <img src="/images/eighty.jpg" alt=""> 
                     <div class="content">
                         <h2>八十臺陽．再創高峰</h2>
                         <p>
-                            「臺陽美術協會」，今年舉辦第80屆臺陽美展，4月15日在台北國父紀念館中山國家畫廊展出前輩會員楊三郎、陳澄波、李梅樹、顏水龍、廖繼春、楊英風、林之助等大師作品。<br> 李梅樹本次有 【溫暖】參展
+                            「臺陽美術協會」，今年舉辦第80屆臺陽美展，4月15日在台北國父紀念館中山國家畫廊展出前輩會員<br>
+                            楊三郎、陳澄波、李梅樹、顏水龍、廖繼春、楊英風、林之助等大師作品。<br> 李梅樹本次有 【溫暖】參展
                         </p>
                         <p>
-                            【八十臺陽．再創高峰《第80屆臺陽美術特展》<br>
-                            ◆一《臺北市》首展：<br>
-                            ◇日期：2017年４月12日～４月23日<br>
-                            ◇地點：國立國父紀念館<br>
-                            ◇展場：博愛國家畫廊<br>
-                            ◇時間：上午九時～下午六時（星期一照常開放）<br>
-                            ◇專輯：12Ｋ精裝本 ◇印刷：興台彩色印刷公司承印<br>
-                            ◆二《臺中市》巡迴展：<br>
-                            ◇日期：2017年５月６日～５月17日<br>
-                            ◇地點：臺中市立大墩文化中心<br>
-                            ◇展場：大墩藝廊五、六、動力空間<br>
-                            ◇時間：上午九時～下午九時（星期一休館）<br>
-                            ◆三《嘉義市》巡迴展：<br>
-                            ◇日期：2017年６月28日～７月30日<br>
-                            ◇地點：嘉義博物館<br>
-                            ◆四《高雄市》巡迴展：<br>
-                            ◇日期：2018年２月10日～４月29日<br>
-                            ◇地點：高雄市佛光山佛陀紀念館
+                            【八十臺陽．再創高峰《第80屆臺陽美術特展》<br> ◆一《臺北市》首展：
+                            <br> ◇日期：2017年４月12日～４月23日
+                            <br> ◇地點：國立國父紀念館
+                            <br> ◇展場：博愛國家畫廊
+                            <br> ◇時間：上午九時～下午六時（星期一照常開放）
+                            <br> ◇專輯：12Ｋ精裝本 ◇印刷：興台彩色印刷公司承印<br> ◆二《臺中市》巡迴展：
+                            <br> ◇日期：2017年５月６日～５月17日
+                            <br> ◇地點：臺中市立大墩文化中心
+                            <br> ◇展場：大墩藝廊五、六、動力空間
+                            <br> ◇時間：上午九時～下午九時（星期一休館）
+                            <br> ◆三《嘉義市》巡迴展：
+                            <br> ◇日期：2017年６月28日～７月30日
+                            <br> ◇地點：嘉義博物館
+                            <br> ◆四《高雄市》巡迴展：
+                            <br> ◇日期：2018年２月10日～４月29日
+                            <br> ◇地點：高雄市佛光山佛陀紀念館
                         </p>
                     </div> <span class="date">2017</span> </div>
+
 
                 <div class="block"> <img src="/images/msm_2017.png" alt="">
                     <div class="content">
@@ -68,12 +68,14 @@
                 <div class="block"> <img src="/images/glg1.jpg" alt="">
                     <div class="content">
                         <h2>Google LocalGuides Meetup</h2>
-                        <p>三峽在地嚮導深度旅遊</p> <a href="https://www.facebook.com/events/1637690463228486/" class="button">連結</a>                        </div> <span class="date">2016 / 10 / 30</span> </div>
+                        <p>三峽在地嚮導深度旅遊</p> <a href="https://www.facebook.com/events/1637690463228486/" class="button">連結</a>                        </div>
+                    <span class="date">2016 / 10 / 30</span> </div>
 
                 <div class="block"> <img src="/images/sos.jpg" alt="">
                     <div class="content">
                         <h2>【老街川流．常民的腳印】</h2>
-                        <p>三峽老街常民故事特展</p> <a href="https://www.facebook.com/StoryofSanxiaOldStreet2016/" class="button">連結</a>                        </div> <span class="date">2016 / 10 / 29</span> </div>
+                        <p>三峽老街常民故事特展</p> <a href="https://www.facebook.com/StoryofSanxiaOldStreet2016/" class="button">連結</a>                        </div>
+                    <span class="date">2016 / 10 / 29</span> </div>
 
                 <div class="block">
                     <div class="content">
