--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -32,7 +32,7 @@
                             【八十臺陽．再創高峰《第80屆臺陽美術特展》<br>《臺北市》首展：
                             <br>日期：2017年４月12日～４月23日
                             <br>地點：國立國父紀念館
-                            <br>展場：博愛國家畫廊
+                            <br>展場：中山國家畫廊
                             <br>時間：上午九時～下午六時（星期一照常開放）
                             <br>《臺中市》巡迴展：
                             <br>日期：2017年５月６日～５月17日
