--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -41,7 +41,7 @@
                             <br>時間：上午九時～下午九時（星期一休館）
                             <br>《嘉義市》巡迴展：
                             <br>日期：2017年６月28日～７月30日
-                            <br>地點：嘉義博物館
+                            <br>地點：嘉義市立博物館
                             <br>《高雄市》巡迴展：
                             <br>日期：2018年２月10日～４月29日
                             <br>地點：高雄市佛光山佛陀紀念館
