--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -29,7 +29,7 @@
                             楊三郎、陳澄波、李梅樹、顏水龍、廖繼春、楊英風、林之助等大師作品。<br> 李梅樹本次有 【溫暖】參展
                         </p>
                         <p>
-                            【八十臺陽．再創高峰《第80屆臺陽美術特展》<br>《臺北市》首展：
+                            【八十臺陽．再創高峰】<br>《第80屆臺陽美術特展》<br>《臺北市》首展：
                             <br>日期：2017年４月12日～４月23日
                             <br>地點：國立國父紀念館
                             <br>展場：中山國家畫廊
