--- a/tw/culture/meishumonth.html
+++ b/tw/culture/meishumonth.html
@@ -78,7 +78,7 @@
       </ul> <a class="button">基金會章程</a> </div>
   </section>
   <!-- Footer -->
-  <footer id="footer" class="red"></footer>
+  <footer id="footer" class="isRed"></footer>
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <!-- Scripts -->
