--- a/tw/culture/reports.html
+++ b/tw/culture/reports.html
@@ -43,7 +43,7 @@
                     <div class="msg" data-type="2016">
                         <li>2016(50則)</li>
 
-                        <ul class="timeline history isGreen">
+                        <ul class="timeline history green">
                             <li>
                                 <p class="timeline-date">2016年01月10日</p>
                                 <div class="timeline-content">
@@ -284,7 +284,7 @@
 
                     <div class="msg" data-type="2015">
                         <li>2015(60則)</li>
-                        <ul class="timeline history isGreen">
+                        <ul class="timeline history green">
                             <li>
                                 <p class="timeline-date">2015年01月15日</p>
                                 <div class="timeline-content">
@@ -570,7 +570,7 @@
                     </div>
                     <div class="msg" data-type="2014">
                         <li>2014(則)</li>
-                        <ul class="timeline history isGreen">
+                        <ul class="timeline history green">
                             <li>
                                 <p class="timeline-date">2014年01月01日</p>
                                 <div class="timeline-content">
