--- a/tw/culture/tempelate.html
+++ b/tw/culture/tempelate.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="msg" data-type="history">
                         <li>大事記</li>
-                        <ul class="timeline history red">
+                        <ul class="timeline history green">
                             <li>
                                 <p class="timeline-date">1767年 (乾隆32年)</p>
                                 <div class="timeline-content">
