--- a/tw/index.html
+++ b/tw/index.html
@@ -16,13 +16,22 @@
             <header>
                 <h1>李梅樹紀念館</h1>
                 <h2>用藝術，說土地的故事</h2>
-                <p>開館時間 : 每週六、日，10am-5pm</p>
+                <p>開館時間 : 每週六、日與國定假日，10am-5pm</p>
                 <br> <a href="#traffic" class="button scrolly">詳細交通方式</a> </header>
         </div>
     </section>
     <section id="news">
         <div class="content">
             <h1>最新消息</h1>
+            <div class="all-news">
+                <div class="news">
+                    <a href="#"><img src="/images/msmreview.jpg"></a>
+                    <br>
+                    <h3>【梅樹月‧敘】 :梅樹月的那些年</h3>
+                    <p>4/30 晚上七點 線上直播講座
+                        <br>
+                        <br> <a href="culture/news.html" class="button">連結</a> </p>
+                </div>
             <div class="all-news">
                 <div class="news">
                     <a href="#"><img src="/images/eighty.jpg"></a>
@@ -36,7 +45,7 @@
                     <a href="#"><img src="/images/msm.jpg"></a>
                     <br>
                     <h3>2017梅樹月</h3>
-                    <p>即日起至4/23日
+                    <p>3/11~4/23
                         <br>
                         <br> <a href="https://msm.limeishu.org.tw/" class="button">連結</a> </p>
                 </div>
