--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -21,6 +21,26 @@
         <section class="timeline">
             <div class="container">
 
+                 <div class="block"> <img src="/images/msm.jpg" alt="">
+                    <div class="content">
+                        <h2>【梅樹月‧敘】 :梅樹月的那些年 線上講座</h2>
+                        <p>【梅樹月‧敘】系列線上講座
+                        <br>【梅樹月‧敘】:梅樹月的那些年
+                        <br>「敘」，釋義為發抒情思，亦有說明、話家常的意涵。</p>
+                        <br>光陰荏苒，不知不覺梅樹月已悄然走過六年，宛若孩童就讀小學一般，畢業了，即將邁入下一個階段的挑戰。
+                        <br>梅樹月已然成為李梅樹紀念館的年度盛典，這為期一個半月的地方藝文聯展，起初是一群傻子的夢想，更是許多夥伴經過好一段時間的籌備，才能展現出如此精彩的梅樹月。
+                        <br>2017梅樹月前幾天已圓滿落幕，在這之後，我們也將邀請多位梅樹月重要的參與夥伴，透過一系列的講座活動來敘說他們參與梅樹月的點點滴滴。
+                        <br>【梅樹月‧敘】系列講座的第一場，我們特地邀請了一位梅樹月「全勤生」來展開序曲
+                        <br>他是唯一一位自2012年第一屆梅樹月就參與的學生志工夥伴- 鐘文志先生，透過他過往參與 國立臺北大學 三峽文化志工團 到今日的經歷，和大家一起回顧梅樹月的「那些年」</p>
+                        <p>【梅樹月‧敘】:梅樹月的那些年
+                        <br>本次活動為線上直播講座，現場也開放少量席次，請把握機會!
+                        <br>時間:2017/04/30 下午七點
+                        <br>直播網址:https://www.facebook.com/limeishu.org/
+                        <br>地點: 書福店 SUFU lab 新北市三峽區清水街332號
+                        <br>入場費:一杯咖啡
+                        <a href="https://www.facebook.com/events/1151015518341545" class="button">活動頁面</a>
+                    </div> <span class="date">2017 / 4 / 26 </span> </div>
+                
                 <div class="block"> <img src="/images/eighty.jpg" alt=""> 
                     <div class="content">
                         <h2>八十臺陽．再創高峰</h2>
@@ -46,7 +66,7 @@
                             <br>日期：2018年２月10日～４月29日
                             <br>地點：高雄市佛光山佛陀紀念館
                         </p>
-                    </div> <span class="date">2017</span> </div>
+                    </div> <span class="date">2017 / 4 / 23</span> </div>
 
 
                 <div class="block"> <img src="/images/msm_2017.png" alt="">
