--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -21,7 +21,7 @@
         <section class="timeline">
             <div class="container">
 
-                 <div class="block"> <img src="/images/msm.jpg" alt="">
+                 <div class="block"> <img src="/images/msmreview.jpg" alt="">
                     <div class="content">
                         <h2>【梅樹月‧敘】 :梅樹月的那些年 線上講座</h2>
                         <p>【梅樹月‧敘】系列線上講座
