--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -27,11 +27,16 @@
                         <p>【梅樹月‧敘】系列線上講座
                         <br>【梅樹月‧敘】:梅樹月的那些年
                         <br>「敘」，釋義為發抒情思，亦有說明、話家常的意涵。</p>
-                        <br>光陰荏苒，不知不覺梅樹月已悄然走過六年，宛若孩童就讀小學一般，畢業了，即將邁入下一個階段的挑戰。
-                        <br>梅樹月已然成為李梅樹紀念館的年度盛典，這為期一個半月的地方藝文聯展，起初是一群傻子的夢想，更是許多夥伴經過好一段時間的籌備，才能展現出如此精彩的梅樹月。
-                        <br>2017梅樹月前幾天已圓滿落幕，在這之後，我們也將邀請多位梅樹月重要的參與夥伴，透過一系列的講座活動來敘說他們參與梅樹月的點點滴滴。
-                        <br>【梅樹月‧敘】系列講座的第一場，我們特地邀請了一位梅樹月「全勤生」來展開序曲
-                        <br>他是唯一一位自2012年第一屆梅樹月就參與的學生志工夥伴- 鐘文志先生，透過他過往參與 國立臺北大學 三峽文化志工團 到今日的經歷，和大家一起回顧梅樹月的「那些年」</p>
+                        <p>光陰荏苒，不知不覺梅樹月已悄然走過六年
+                        <br>宛若孩童就讀小學一般，畢業了，即將邁入下一個階段的挑戰。
+                        <br>梅樹月已然成為李梅樹紀念館的年度盛典，這為期一個半月的地方藝文聯展
+                        <br>起初是一群傻子的夢想，更是許多夥伴經過好一段時間的籌備，才能展現出如此精彩的梅樹月。
+                        <br>2017梅樹月前幾天已圓滿落幕，在這之後
+                        <br>我們也將邀請多位梅樹月重要的參與夥伴，透過一系列的講座活動來敘說他們參與梅樹月的點點滴滴。
+                        <br>【梅樹月‧敘】系列講座的第一場
+                        <br>我們特地邀請了一位梅樹月「全勤生」來展開序曲
+                        <br>他是唯一一位自2012年第一屆梅樹月就參與的學生志工夥伴- 鐘文志先生
+                        <br>透過他過往參與 國立臺北大學 三峽文化志工團 到今日的經歷，和大家一起回顧梅樹月的「那些年」</p>
                         <p>【梅樹月‧敘】:梅樹月的那些年
                         <br>本次活動為線上直播講座，現場也開放少量席次，請把握機會!
                         <br>時間:2017/04/30 下午七點
