--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -36,14 +36,14 @@
                         <br>【梅樹月‧敘】系列講座的第一場
                         <br>我們特地邀請了一位梅樹月「全勤生」來展開序曲
                         <br>他是唯一一位自2012年第一屆梅樹月就參與的學生志工夥伴- 鐘文志先生
-                        <br>透過他過往參與 國立臺北大學 三峽文化志工團 到今日的經歷，和大家一起回顧梅樹月的「那些年」</p>
-                        <p>【梅樹月‧敘】:梅樹月的那些年
+                        <br>透過他過往參與 國立臺北大學 三峽文化志工團 到今日的經歷，和大家一起回顧梅樹月的「那些年」
+                        <br>【梅樹月‧敘】:梅樹月的那些年
                         <br>本次活動為線上直播講座，現場也開放少量席次，請把握機會!
                         <br>時間:2017/04/30 下午七點
                         <br>直播網址:https://www.facebook.com/limeishu.org/
                         <br>地點: 書福店 SUFU lab 新北市三峽區清水街332號
                         <br>入場費:一杯咖啡
-                        <a href="https://www.facebook.com/events/1151015518341545" class="button">活動頁面</a>
+                        <a href="https://www.facebook.com/events/1151015518341545" class="button">活動頁面</a></p>
                     </div> <span class="date">2017 / 4 / 26 </span> </div>
                 
                 <div class="block"> <img src="/images/eighty.jpg" alt=""> 
