--- a/tw/culture/news.html
+++ b/tw/culture/news.html
@@ -43,7 +43,8 @@
                         <br>直播網址:https://www.facebook.com/limeishu.org/
                         <br>地點: 書福店 SUFU lab 新北市三峽區清水街332號
                         <br>入場費:一杯咖啡
-                        <a href="https://www.facebook.com/events/1151015518341545" class="button">活動頁面</a></p>
+                        </p>
+                        <a href="https://www.facebook.com/events/1151015518341545" class="button">活動頁面</a>
                     </div> <span class="date">2017 / 4 / 26 </span> </div>
                 
                 <div class="block"> <img src="/images/eighty.jpg" alt=""> 
