--- a/tw/about/memorial.html
+++ b/tw/about/memorial.html
@@ -49,12 +49,12 @@
           <h4>參觀需知</h4>
           <p>
             <li>本館採收費參觀制，清潔費每位100元、敬老/學生/軍警每位80元、嬰幼兒免費。</li>
-            <li>開放參觀時間:每週六、日，10:00AM--05:00PM。週一至週五，歡迎團體預約參觀。(團體預約參觀時間，可提早自上午九點開始，詳情請洽詢本館)</li>
+            <li>開放參觀時間:每週六、日，10:00AM--05:00PM。其餘時段，歡迎團體預約參觀。(團體預約參觀時間，可提早自上午九點開始，詳情請洽詢本館)</li>
             <li>可安排團體導覽三峽祖師廟、李梅樹紀念館、三峽老街及海山學文物展覽館，共需時約三小時。(若要參觀海山學文物展覽館，需提前兩週預約)</li>
             <li>額外行程視情況酌收額外導覽費。</li>
             <li>入館參觀請勿攝影，請勿飲食，請勿吸煙。</li>
             <li>未滿12歲兒童請由家長陪伴參觀。</li>
-            <li>其他參觀細則請洽<a href="tel:0226732333">(02)2673-2333</a>或<a href="mailto:lms@limeishu.org">E-mail : lms@limeishu.org</a></li>
+            <li>其他參觀細則請洽<a href="tel:0226732333">(02)2673-2333</a>或<a href="mailto:limeishu@gmail.com">E-mail : limeishu@gmail.com</a></li>
           </p>
         </div>
         <div class="msg" data-type="fundation">
